# hr

sock-merchant/: CHANGELOG.md  sock-merchant.cabal
the-birthday-bar/: CHANGELOG.md  Submit.hs  the-birthday-bar.cabal
the-birthday-bar/app/: Main.hs
