cabal-version:      2.4
name:               sock-merchant
version:            0.1.0.0
synopsis:
    solution to https://www.hackerrank.com/challenges/sock-merchant/

author:             tensegrist
maintainer:         tensegrist@protonmail.com
extra-source-files: CHANGELOG.md

executable sock-merchant
    main-is:          Main.hs
    build-depends:    base ^>=4.14.1.0
    hs-source-dirs:   app
    default-language: Haskell2010
