cabal-version:      2.4
name:               the-birthday-bar
version:            0.1.0.0
synopsis:
    solution to https://www.hackerrank.com/challenges/the-birthday-bar/

author:             Swann Moreau
maintainer:         evertedsphere@gmail.com
extra-source-files: CHANGELOG.md

executable the-birthday-bar
    main-is:          Main.hs
    build-depends:    base ^>=4.14.1.0, split, text, criterion, QuickCheck
    hs-source-dirs:   app
    default-language: Haskell2010
